syntax = "proto3";

option go_package = "document-generators-infrastructure-repositories-contracts";

package Edm.DocumentGenerators.Infrastructure.Repositories.Contracts;

option csharp_namespace = "Edm.DocumentGenerators.Infrastructure.Repositories.Contracts";

message DocumentStatusChangedNotificationMatchDb {
  string status_from_id = 1;
  string status_to_id = 2;
}
